# mm-dd

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/lib/: Calendar.svelte  Editor.svelte  FileList.svelte  FolderPanel.svelte  NoteList.svelte  SearchBar.svelte  StatusBar.svelte  ipc.ts  stores.svelte.ts
src/routes/: +page.svelte
